--- a/index.html
+++ b/index.html
@@ -55,11 +55,23 @@
             </li>
           </ul>
         </address>
+
+        <button class="burder-btm" type="button">
+          <svg class="burger-icon" width="24" height="24">
+        <use href="./images/icons.svg#burger-icon"</use>
+        </svg></button>
       </div>
     </header>
 
+    <div class="mobile-menu">
+      <div class=" container mobile-menu-container"></div>
+<button class="mobile-menu-close">Close</button>
+<nav class="mobile-menu-nav">Navigation</nav>
+<address>Address</address>
+<div>Social link</div>
+    </div>
     <main>
-      <section class="hero">
+      <section class="hero hidden">
         <div class="container">
           <h1 class="hero-title">
             Effective Solutions <br />
@@ -69,7 +81,7 @@
         </div>
       </section>
 
-      <section class="features">
+      <section class="features hidden">
         <div class="container">
           <h2 class="features-heading visually-hidden">Our Features</h2>
           <ul class="features-list">
@@ -125,7 +137,7 @@
         </div>
       </section>
 
-      <section class="team">
+      <section class="team hidden">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
@@ -296,7 +308,7 @@
         </div>
       </section>
 
-      <section class="portfolio">
+      <section class="portfolio hidden">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -414,7 +426,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer hidden">
       <div class="container footer-container">
         <div class="footer-logo-wrap">
           <a href="./index.html" class="footer-logo">
@@ -480,8 +492,8 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
-       <div class="modal">
+    <div class="backdrop is-open hidden">
+       <div class="modal hidden">
   <button type="button" class="modal-close">
     <svg class="modal-close-icon" width="8" height="8">
       <use href="./images/icons.svg#icon-close"></use>
